# Battleships_project

./: .gameFrontEnd.py.un~  .gitignore  Ai.py  Battleships.py  Gameboard.py  Player.py  PositiveFractions.py  README.md  References.py  gameFrontEnd.py  gameFrontEnd.py~  setup.cfg  testing.py
Battleships/: Ai.py  Battleships.py  GameBoard.py  Player.py  References.py  __init__.py  cliBattleships.py
Battleships_api/: Ai.py  Battleships.py  CLIBattleships.py  GameBoard.py  Player.py  References.py
Battleships_main/: Ai.py  Battleships.py  GameBoard.py  Player.py  References.py  cliBattleships.py
Battleships_main/tests/: testGameboard.py
Battleships_project/: LICENSE  README.md  setup.cfg
Battleships_project/original/: gameFrontEnd.py
Battleships_project/src/Battleships_api/: Ai.py
battleships_java/battleships_java_rest/: pom.xml
battleships_java/battleships_java_rest/src/main/java/com/simalpas/battleships_java_rest/: API.java  Ai.java  BattleshipsMain.java  Coord.java  GameBoard.java  JAXRSConfiguration.java  Player.java  References.java  Result.java
fizz_buzz_js/approach1/: fizzbuzz1.css  fizzbuzz1.html  fizzbuzz1.js
issues/: current_issues.md
original/: Battleships.py  gameFrontEnd.py
previous_builds/: Battleships_api-0.1.0-py3-none-any.whl  Battleships_api-0.1.1-py3-none-any.whl
src/Battleships_api/: Battleships.py  Player.py  References.py  cliBattleships.py
tests/: testAi.py  testGameboard.py  test_Ai.py  test_Battleships.py  test_Gameboard.py
(+7 files in other folders)
