[metadata]
name = Battleships_api
version = 0.1.0
author = Simon Malpas
author_email = 55702741+simalpas@users.noreply.github.com
description = Play Battleships, incudes a basic cli front end
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/simalpas/Battleships_project
project_urls =
    Bug Tracker = https://github.com/simalpas/Battleships_project/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = Battleships_api
packages = find:
python_requires = >=3.6

[options.packages.find]
where = Battli Battleships_api