[metadata]
name = Battleships_api
version = 0.0.1
author = Simon Malpas
author_email = 
description = Play Battleships, incudes a basic cli front end
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/simalpas/Battleships_project
project_urls =
    Bug Tracker = https://github.com/simalpas/Battleships_project/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src